# herakles-jira-client

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythontest.yml
src/herakles/: __init__.py  auth.py  cli.py  jira.py
src/herakles/jql/: jql_builder.py
tests/herakles/: test_auth.py  test_jira_response_iterable.py  test_jira_wrapper.py
tests/herakles/jql/: test_jql_builder.py
