[tool.poetry]
name = "herakles"
version = "0.1.7"
description = "Tools for working with the python jira client."
authors = ["David Bradford <david.bradford@mongodb.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dbradf/herakles-jira-client"

[tool.poetry.dependencies]
python = "^3.7"
jira = "^2.0"
PyYaml = "^5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-black = "^0.3"
pytest-sugar = "^0.9"
pytest-mypy = "^0.7"
black = "^20.8b1"
pytest-pydocstyle = "^2.2.0"
pytest-flake8 = "^1.0.6"
pytest-isort = "^1.2.0"

[tool.black]
line-length = 100
target-version = ['py37']
exclude = 'setup.py'
